# learning-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
00-Utils/: CMakeLists.txt
00-Utils/cmake/: FindM.cmake
00-Utils/include/common/: tga.h
00-Utils/include/glad/: glad.h
00-Utils/include/lofw/: tga.h  utils.h
00-Utils/src/: glad.c  tga.c  utils.c
01-HelloTriangle/: CMakeLists.txt  main.c
01-HelloTriangle/assets/: hello_triangle.vs
01-HelloWindow/: CMakeLists.txt
01-HelloWindow/src/: main.c
02-HelloShaders/: CMakeLists.txt  main.c
02-HelloShaders/assets/: hello_shaders.vs
02-HelloTriangle/: CMakeLists.txt
02-HelloTriangle/include/: logl.h
02-HelloTriangle/src/: logl.c  main.c
03-Shaders/: .CMakeLists.txt.swp  CMakeLists.txt
03-Shaders/assets/: .default.frag.swp  .default.vert.swp  default.frag  default.vert
03-Shaders/include/: .logl.h.swp  logl.h
03-Shaders/src/: .logl.c.swp  .main.c.swp  logl.c  main.c
03-Textures/: CMakeLists.txt  main.c
04-Textures/: CMakeLists.txt
04-Textures/assets/: default.frag
04-Textures/src/: main.c
05-Transformations/: CMakeLists.txt
05-Transformations/assets/: default.vert
05-Transformations/include/: logl.h  transform.h
05-Transformations/include/lmath/: lmath.h  mat4.h  vec4.h
05-Transformations/src/: main.c  transform.c
06-CoordinateSystems/: CMakeLists.txt
06-CoordinateSystems/assets/: default.frag  default.vert
06-CoordinateSystems/include/lmath/: mat4.h  vec3.h
06-CoordinateSystems/src/: main.c  transform.c
07-Camera/: CMakeLists.txt
07-Camera/assets/: default.vert
07-Camera/include/: camera.h
07-Camera/include/glad/: glad.h
07-Camera/include/lmath/: vec3.h
07-Camera/src/: camera.c  main.c
08-Lighting-Colors/: CMakeLists.txt
08-Lighting-Colors/src/: logl.c  main.c
09-Lighting-Phong/: CMakeLists.txt
09-Lighting-Phong/assets/: lighting.frag  lighting.vert
09-Lighting-Phong/include/: transform.h
09-Lighting-Phong/src/: logl.c  main.c
10-Lighting-Materials/: CMakeLists.txt
10-Lighting-Materials/assets/: lighting.frag
10-Lighting-Materials/include/lmath/: lmath.h  mat4.h  vec3.h
10-Lighting-Materials/src/: main.c
11-Lighting-Maps/: CMakeLists.txt
11-Lighting-Maps/assets/: phong.frag
11-Lighting-Maps/include/: shader.h  texture.h
11-Lighting-Maps/include/lmath/: lmath.h  vec4.h
11-Lighting-Maps/src/: glad.c  main.c  shader.c  texture.c
12-Lighting-Casters/: CMakeLists.txt
12-Lighting-Casters/assets/: phong.vert
12-Lighting-Casters/include/: shader.h
12-Lighting-Casters/include/lmath/: vec2.h
12-Lighting-Casters/src/: main.c  shader.c  transform.c
13-Lighting-Multiple/: CMakeLists.txt
13-Lighting-Multiple/assets/: phong.frag
13-Lighting-Multiple/include/: logl.h  shader.h
13-Lighting-Multiple/src/: camera.c  main.c  shader.c  texture.c  transform.c
XX-InfernoKittenEngine/: .gitignore  CMakeLists.txt
XX-InfernoKittenEngine/cmake/: FindCheck.cmake  FindMsgpack.cmake  Testing.cmake
XX-InfernoKittenEngine/include/ike/: any.h  asset.h  display.h  hashmap.h  ike.h  image.h  image_decode.h  mat4.h  mathutil.h  pool.h  presenter.h  quat.h  spec.h  spec_decode.h  timer.h  vec2.h  vec3.h  vec4.h
XX-InfernoKittenEngine/scripts/: refactor-all  rename
XX-InfernoKittenEngine/src/: CMakeLists.txt  asset.c  display.c  hashmap.c  ike.c  image.c  image_decode.c  pool.c  presenter.c  spec.c  spec_decode.c  timer.c
XX-InfernoKittenEngine/tests/: CMakeLists.txt  asset_test.c  check_mat4.c  check_mathutil.c  check_vec2.c  check_vec3.c  check_vec4.c  config.h.in  display_test.c  hashmap_test.c  mat4_helper.h  mat4_test.c  mathutil_test.c  pool_test.c  presenter_test.c  quat_helper.h  quat_test.c  spec_test.c  timer_test.c  vec2_helper.h  vec2_test.c  vec3_helper.h  vec3_test.c  vec4_helper.h  vec4_test.c
XX-InfernoKittenEngine/tests/assets/: data.json  data.spec  display.spec  presenter-config.json  presenter-config.spec
XX-InfernoKittenEngine/tools/: CMakeLists.txt  ike-config-display.c
